--- a/group11 exercise/group11 exercise/dav23.html
+++ b/group11 exercise/group11 exercise/dav23.html
@@ -30,7 +30,7 @@
         <h1 class="name1">4. Nissan S Cargo</h1>
         <h2>ეს რეტრო სტილის კომერციული ფურგონი ნისანმა იყიდა 1989-1992 წლებში. შეასრულა თუ არა სამუშაო ნივთების გადაზიდვის თვალსაზრისით? ალბათ. ცოტა სასაცილოდ ხომ არ გამოიყურები, როცა მართავდი? შენ გვითხარი.</h2>
         <img src="https://assets1.cbsnewsstatic.com/hub/i/r/2011/04/22/10d93981-a643-11e2-a3f0-029118418759/thumbnail/620x350/c5dc57de988230192e66ce7104278a93/1989-Nissan-SCargo1-02-2.jpg?v=8f9acb0830ce2ef2593f1d92f65cccba" width="1000">
-        <h1 class="name1">1957 წლის Fiat 600 Multipla Marinella</h1>
+        <h1 class="name1">5. 1957 წლის Fiat 600 Multipla Marinella</h1>
         <h2><i class="name2">Fiat Multipla</i> იყო მანქანების სერია მრავალი ვარიაციით (როგორც აქ ნაჩვენებია), რომელიც წარმოებული იყო 1956-1965 წლებში და იყო Fiat-ის პირველი მანქანა, რომელიც აღჭურვილი იყო უკანა ძრავით. ის ასევე გამოირჩეოდა ძალიან გამორჩეული იერით, ისეთი, როგორსაც ჩვენ ვუკავშირდებით გასართობ პარკში თქვენს გადაზიდვას, ვიდრე ბავშვების სკოლაში გაყვანას.</h2>
         <img src="https://assets2.cbsnewsstatic.com/hub/i/r/2011/04/22/10d97769-a643-11e2-a3f0-029118418759/thumbnail/620x350/ded4ee00811f9998c15aed245cc015ff/1957-Fiat600-Multipla-2.jpg?v=8f9acb0830ce2ef2593f1d92f65cccba" width="1000">
     </body>
