--- a/day31/classwork/classword.html
+++ b/day31/classwork/classword.html
@@ -1,3 +1,13 @@
+<!-- <ol>
+    <li>gg</li>
+    <li>gggggg</li>
+</ol>
+
+<li>
+    <li>gg</li>
+    <li>jj</li>
+</li> -->
+
 <!-- დავალება: თქვენს პორტფოლიოში ამ თეგების 
 გამოყენებით გააუმჯობესეთ საიტი -->
 
@@ -66,7 +76,7 @@
         <h3>საკონტაქტო: <a href="https://r.search.yahoo.com/_ylt=AwrFaUknIh1mV5kLw2FXNyoA;_ylu=Y29sbwNiZjEEcG9zAzEEdnRpZAMEc2VjA3Ny/RV=2/RE=1714394919/RO=10/RU=https%3a%2f%2fzoommer.ge%2f/RK=2/RS=mseTQNQefCV5kPqwPdYEw9kvWZ0-">zoomer page</a></h3>
     </body>
 
-</html> -->
+</html>  -->
 
 
 
@@ -77,7 +87,7 @@
 3)Contact me. 
 ინფორმაცია გადაანაწილეთ ამ ფეიჯებზე 
 -->
-
+<!--   ნაწილი 2  -->
 <!-- 
 დავალება: შექმენით მენიუ, რომლის გამოყენებითად ნავიგაციას 
 (გადაადგილება) შექმნის სხვადასხვა ფეიჯებზე. ამ დავალებისთვის 
@@ -85,14 +95,22 @@
 
 <html>
     <head>
-        <title>my ...</title>
+        <title>my menu</title>
     </head>
 
-    <body>              ????????
+    <body>
         <ul>        
-            <li><a href="mtavari.html"></a>მთავარი</li>
-            <li><a href="About me.html"></a>About me</li>
-            <li><a href="Contact me.html"></a>Contact me</li>
+            <li>
+                <a href="/day31/classwork/mein.html">main</a>
+            </li>
+
+            <li>
+                <a href="/day31/classwork/about my.html">About me</a>
+            </li>
+            
+            <li>
+                <a href="/day31/classwork/Contact me.html">Contact me</a>
+            </li>
         </ul>
     </body>
-</html>
+</html> 
