--- a/day31/classwork/mein.html
+++ b/day31/classwork/mein.html
@@ -20,5 +20,9 @@
     </body>
 </html> 
 
-<h1>contact my</h1>
-<p>ეს არის ჩემი საკონტაქტო<a href="https://www.facebook.com/tazo.abesadze.543?mibextid=ZbWKwL">facebook </a>პროფილი</p>
+<h1>main</h1>
+
+<p>გადადი რომელიმე ფეიჯზე. <br> აქ იქნება ჩემს შესახებ ინფორმაცია
+აქ თქვენ ნახავთ ჩემს ინფორმაციას, ასევე ნახავტ ჩემს საკონტაქტოს</p>
+
+<img src="https://www.auto.ge/files/slides/1099514019.jpg" width="400">
