--- a/HTML Remembering/remember.html
+++ b/HTML Remembering/remember.html
@@ -54,4 +54,83 @@ p - პარაგრაფი
 
 📜  li - list item - სიის ელემენტი (აიტემი)
 
--->
+📜  p - bloklevel - ანუ ის იკავებს მთელს ხაზს, ხოლო
+    button - inline - ანუ ის იკავებს იმხელა ადგილს რამხელაც სჭირდება
+
+
+📜-📜-📜-📜  label - ის გამოიყენება შეყვანის ველის მის აღწერილ 
+ტექსტთან დასაკავშირებლად, რაც ეკრანის მკითხველს გაუადვილებს 
+იმის გაგებას, თუ რა ხდება ანუ რა უნდა შეიყვანოს კონკრეტულ ადგილას.
+მაგ:
+your name: /________/
+
+1 -> form - ფორმის გარესე იქნება მხოლოდ ინფორმაციის შეტანა
+მაგ:
+form-ის გარეშე  /_____/
+form-ის გამოყენებით  name: /_____/
+
+2 ->
+მაგ:
+<label for="yourname">name: </label>
+<input type="text" id="yourname">
+
+id - გვჭირდება input-ის და label-ის დასაკავშირებლად
+
+for - მასში უნდა მივუთითოთ იმ აიდის სახელი რაც მითითებული
+გვაქვაქვს input-სთვის, რადგან ისინი დაკავშირდნენ.
+
+3 ->  
+------------------/>
+--1) type="text" - გამოიყენება იმისთვის, რომ მომხმარებელს
+უბრალოდ რაიმე შემოვატანინოთ ტექსტი როგორებიცაა: სახელი, გვარი
+და ასე შემდეგ.
+
+--2) type="radio" - მოსანიშნი. მომხმარებელმა ამოირჩიოს რომელიმე
+მაგ:
+your gender:
+• male
+• woman
+
+--3) 
+type="checkbox" - მოსანიშნი. მომხმარებელმა უნდა ამოირჩიოს 
+რომელიმე, მაგრამ ის იქნება კვადრატებით
+მაგ:
+your gender:
+█  male
+█  woman
+
+--4)
+type="submit" - ერთერთი მთავარი input-ის თეგი, რომელიც აგზავნის
+ჩვენს მიერ შეყვანილ მონაცემს (ინფორმაციას).
+
+--5)
+type="button" - კლიკი
+
+--6)
+type="email" - ჩვენ როდესაც შევიყვანთ ემაილს, ამ დროს ჩვენ 
+შეგვიძლია, რომ ჩვენს შეყვანილ მაილს არ მივუწეროთ @gmail.com
+
+--7)
+type="password" - ამ დროს ჩვენს შეყვანილ ფასვორდს არ აჩენს
+მაგ:
+type="password"-ის გამოყენებით   password: •••••••••
+type="password"-ის გარეშე   password: tazoabesadze_123
+
+--5)
+type="date" - ამ დროს ჩვენ ვაყვანინებთ მომხმარებელს მის დაბადების
+დღეს. 
+
+4 ->
+required (აუცილებლობა) - რომელ ინფუთშიდაც ჩვენ მას დავუწერთ
+იქ იქნება მნიშვნელოვანი მისი გამოყენება. ანუ მომხმარებელმა ის 
+აუცილებლად უნდა შეიყვანოს 
+
+5 ->
+placeholder - (გამოიყენება input-ში). ეს იმისთვისაა, რომ მომხმარებელს 
+მივუთითოთ თუ რა უნდა შემოიტანოს. ეს იწერება შემოსატან ოთხკუთხედში
+მაგ:
+<input type="email" placeholder="please enter your email">
+ინპუტში გამოვა ->
+/please enter your email/
+
+6 ->
