--- a/my work1.html/about subaru.html
+++ b/my work1.html/about subaru.html
@@ -1,25 +1,26 @@
 <html>
     <head>
         <title>Subaru World Rally Team</title>
+        <link rel="stylesheet" href="style1.css">
     </head>
 
     <body>
         <ul>
             <li>
-                <a href="about subaru.html">about subaru</a>
+                <a class="link" href="about subaru.html">about subaru</a>
             </li>
             <li>
-                <a href="race history.html">race history</a>
+                <a class="link" href="race history.html">race history</a>
             </li>
             <li>
-                <a href="main.html">main</a>
+                <a class="link" href="main.html">main</a>
             </li>
         </ul>
     </body>
 </html>
 
 
-<h1>about subaru</h1>
+<h1 class="ab1">about subaru</h1>
 
 <html>
     <head>
@@ -27,7 +28,14 @@
     </head>
 
     <body>
-        <h2>საიდან წარმოიშვა სუბარუ</h2>
+
+        <style>
+            body{
+                background-color: rgb(4, 43, 0);
+            }
+        </style>
+
+        <h2 class="ab2">საიდან წარმოიშვა სუბარუ</h2>
         <div style="display: flex;">
             <img src="https://i.pinimg.com/originals/c4/d2/1a/c4d21aad905c1e72bb76d85011b0c06e.jpg" width="400">
             <p>სუბართუ (შუმერ. Su-bir/Subar/Šubur; აქად. Šubartum/Subartum/ina Šú-ba-ri, ასირ. mât Šubarri) — ქვეყანა ძველ ახლო აღმოსავლეთში. მოიხსენიება ძვ. წ. III-I ათასწლეუულებში შუამდინარულ ლურსმულ წყაროებში. სუბართუ გეოგრაფიული ცნებაა, ამ სახელწოდებით ძვ. წ. III-I ათასწლეულებში აღინიშნებოდა მთელი ჩრდილოეთ მესოპოტამია მომიჯნავე რაიონებით — ბაბილონის ჩრდილოეთით მდებარე ვრცელი მხარე (ასურეთის ჩათვლით), რომელიც მოიცავდა ტიგრის ზემო დინების აღმოსავლეთითა და დასავლეთით, ისევე როგორც ევფრატის ზემო დინების აღმოსავლეთით მდებარე მიწებს (ზოგჯერ ლურსმულ წყაროებში სუბართუ საერთოდ ჩრდილოეთის აღსანიშნავად გამოიყენებოდა). ძვ. წ. II ათასწლეულში ძველაღმოსავლური წყაროების მიხედვით, სუბართუ ძირითადად ხურიტებით დასახლებული ტერიტორია იყო. იგი მოიცავდა სხვადასხვა სახელმწიფოებრივ გაერთიანებებს. სუბართუს სახელწოდებას მკვლევრები აიგივებენ ძვ. წ. I ათასწლეულის მესოპოტამიური წყაროების „სუბრია, შუფრიასთან“ (ამ სახელის მატარებელი ქვეყანა ვანის ტბის დასავლეთით მდებარეობდა).</p>
