--- a/my work1.html/race history.html
+++ b/my work1.html/race history.html
@@ -1,59 +1,80 @@
 <html>
     <head>
         <title>Subaru World Rally Team</title>
+        <link rel="stylesheet" href="style1.css">
     </head>
 
     <body>
         <ul>
             <li>
-                <a href="about subaru.html">about subaru</a>
+                <a class="link" href="about subaru.html">about subaru</a>
             </li>
             <li>
-                <a href="race history.html">race history</a>
+                <a class="link" href="race history.html">race history</a>
             </li>
             <li>
-                <a href="main.html">main</a>
+                <a class="link" href="main.html">main</a>
             </li>
         </ul>
     </body>
 </html>
 
 
-<h1>race history</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Title of the document </title>
+    <style>
+      body {
+        background-color: #1c87c9;
+      }
+    </style>
+  </head>
+  <body></body>
+</html>
+
+
+<h1 class="race1">race history</h1>
 
 <html>
     <head>
-        <title></title>
+        <title><link rel="stylesheet" href="style1.css"></title>
     </head>
 
-    <body>
-        <h2>1993 წლის Legacy RS 555 ლაივში</h2>
+    <body> 
+
+        <style>
+            body{
+                background-color: rgb(0, 61, 8);
+            }
+        </style>
+        
+        <h2 class="race2">1993 წლის Legacy RS 555 ლაივში</h2>
 
         <div style="display: flex;">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e2/LEGACY_RS.jpg/330px-LEGACY_RS.jpg" width="450" height="420">
             <p>მიუხედავად იმისა, რომ სუბარუ 1980 წლიდან სხვადასხვა დროს მონაწილეობდა რალის მსოფლიო ჩემპიონატში, მხოლოდ 1989 წლის სექტემბერში შეიქმნა სუბარუს მსოფლიო რალის გუნდი, მისი ამჟამინდელი ფორმით. [12] Subaru Tecnica International-ის (STi) პრეზიდენტმა რიუიჩირო კუზემ დაამყარა პარტნიორობა ბრიტანულ ფირმა Prodrive- თან , რათა მოემზადებინა და ახლახანს წარმოდგენილი Legacy RS მსოფლიო რალის ჩემპიონატში შეეტანა . [3] 1970–1979 Subaru-ს თავდაპირველი შეტევები მსოფლიო რალის ჩემპიონატზე იყო Fuji Heavy Industries-ის მონაწილეობით, ეს იყო თითქმის შემოიფარგლება გამძლეობის ღონისძიებებით, როგორიცაა Safari (ან არამსოფლიო ღონისძიება, ავსტრალიური სამხრეთ ჯვრის რალი) და იყო პატარა წინა წამყვანი FF-1. (1000cc) და შემდეგ Subaru GSR კუპე (ჰომოლოგაციის სპეციალური) როგორც ჯერ 1300cc და შემდეგ 1400cc მანქანა. ეს იყო იმავე EA ოჯახის 4 ცილინდრიანი Boxer ძრავით, რომელიც მოგვიანებით გაიზარდა 1800cc-მდე და ასევე ტურბო ვერსიით. 1980–1989 Subaru-ს შემდეგი შეტევები მსოფლიო რალის ჩემპიონატზე იყო Subaru Rally Team Japan-თან ერთად, რომელსაც მართავს ნორიუკი კოსეკი, Subaru Tecnica International- ის დამფუძნებელი . [13] სუბარუს პირველი მანქანა მსოფლიო რალიზე შევიდა 1980 წლის Safari Rally- ზე და მას შემდეგ გუნდი მხოლოდ რამდენიმე ღონისძიებაში მონაწილეობდა სეზონში, მართავდა Subaru Leone-ს . [14] ადრეულ წლებში მძღოლები იყვნენ არი ვატანენი, პერ ეკლუნდი, შეხარ მეჰტა, მაიკ კირკლანდი, პოსუმ ბორნი და ჰარალდ დემუტი. [2] საუკეთესო შედეგი და ერთადერთი პოდიუმი ბორნმა მიაღწია 1987 წლის რალი ახალ ზელანდიაში მესამე ადგილის დასრულებით. Prodrive-ის ძალისხმევის დაწყებისთანავე, გუნდები ერთმანეთს პარალელურად ეჯიბრებოდნენ, სანამ ერთმანეთში გადაიკეცებოდნენ. [13] 1990–1992 Subaru-მ თავისი პირველი Prodrive-ის შემუშავებული მანქანა, ჯგუფი A Subaru Legacy RS შემოიტანა 1990 წლის სეზონში , პილოტით ფინელი მძღოლის მარკკუ ალენის მიერ . [15] ალენი გუნდში დარჩა 1991 წლის სეზონის განმავლობაში . მისი წარმატებები მოიცავდა მე-4 ადგილს 1990 წლის რალი ფინეთში , ასევე ცნობილი როგორც 1000 ტბის რალი, ხოლო 1991 წელს მე-3 და ორი მე-4 ადგილი. [15] 1992 წლის სეზონისთვის სუბარუ მხოლოდ შვიდში მონაწილეობდა WRC-ის თოთხმეტი შეჯიბრებიდან, ამჯობინებდა მანქანის უნარის დემონსტრირებას ხრეშის რალიებზე. 1992 წლის მძღოლები იყვნენ ფინელი არი ვატანენი თანამძღოლ ბრუნო ბერგლუნდთან ერთად და შოტლანდიელი კოლინ მაკრეი თანამძღოლ დერეკ რინგერთან ერთად . [3] ორივე მძღოლმა შეძლო მეორე ადგილის მიღწევა. [3] კოლინ მაკრეიმ ასევე მოიგო ბრიტანეთის რალის ჩემპიონატი 1991 და 1992 წლებში.</p>
         </div>
 
-        <h2>გუნდის დირექტორი დევიდ რიჩარდსი</h2>
+        <h2 class="race3">გუნდის დირექტორი დევიდ რიჩარდსი</h2>
         <div style="display: flex;">
             <p>1993. 1993 წლის მსოფლიო რალის ჩემპიონატის სეზონისთვის სუბარუს გუნდმა დებიუტი წარმოადგინა თავისი ახლა გამორჩეული ლურჯი და ყვითელი ფერების სქემით ახალ სატიტულო სპონსორთან, State Express 555- თან ერთად . [16] არი ვატანენი და კოლინ მაკრეი დარჩნენ ძირითადი მძღოლები, სეზონი იყო მაკრეის პირველი სრული წელი მსოფლიო რალის ჩემპიონატის კონკურსში. [16] მარკკუ ალენი, ნახევარ განაკვეთზე დაბრუნდა გუნდში ტოიოტაში ხანმოკლე მუშაობის შემდეგ 1992 წელს და პორტუგალიაში სუბარუში მე-4 ადგილი დაიკავა. [15] მაკრეიმ პირველი გამარჯვება მოიპოვა სუბარუსთვის, სეზონის მერვე ღონისძიებაზე, რალი ახალი ზელანდია , ბოლო გასვლა A ჯგუფის Subaru Legacy-ის რალის მანქანებისთვის. [16] [17] მომდევნო ღონისძიებაზე, ფინეთის რალიზე, სუბარუმ დებიუტი წარმოადგინა მათი ახალი Prodrive-ის მიერ განვითარებული ჯგუფი A Impreza რალის მანქანა, რომელიც ცნობილია როგორც Impreza 555, რომელსაც მართავდნენ Vatanen და Alén. [18] [19] ალენი პირველ ეტაპზე დაეჯახა და სუბარუსთვის აღარ წასულა. თუმცა, ვატანენმა აჩვენა, რომ მანქანა სწრაფი იყო, ერთ მომენტში აჩვენა რალიც კი და მეორე ადგილი დაიკავა. [16] სეზონის ბოლოს ვატანენმა მეშვიდე ადგილი დაიკავა მძღოლების ჩემპიონატში, ხოლო კოლინ მაკრეი მეხუთე ადგილზე გავიდა 50-ით. [16] სუბარუმ მესამე ადგილი დაიკავა მწარმოებელთა ჩემპიონატში. [16] სხვა მძღოლები ასევე იბრძოდნენ სუბარუს გუნდისთვის შერჩეულ ღონისძიებებზე. ახალზელანდიელი მძღოლი პოსუმ ბორნი , სუბარუს ადრეული პერიოდის ვეტერანი, შეუერთდა გუნდს Rally New Zealand-სა და Rally Australia-ზე . [16] პიერო ლიატიმ იასპარეზა რალი სანრემოსა და დიდი ბრიტანეთის რალიში . მძღოლებმა რიჩარდ ბერნსმა და ალისტერ მაკრეიმ იასპარეზეს ბრიტანეთის ჩემპიონატში, რომელიც ბერნსმა მოიგო, და კვლავ გამოჩნდნენ Legacies for Rally Great Britain, [16] სადაც ბერნსმა მეშვიდე დაასრულა, ხოლო მაკრეი მეათე. მძღოლები პერ ეკლუნდი და ჰანუ მიკოლა გუნდისთვის შვედეთის რალიში მართავდნენ . [16] 1994–1995 1994 წელს , ყოფილი მსოფლიო რალის მემანქანეების ჩემპიონი კარლოს საინცი შეუერთდა გუნდს თანამძღოლ ლუის მოიასთან ერთად და აიღო Impreza 555 თავის პირველ გამარჯვებამდე საბერძნეთში, აკროპოლის რალიზე. [20] [21] მოგვიანებით გაიმარჯვა ახალ ზელანდიასა და დიდ ბრიტანეთში მაკრეის საჭესთან ერთად. [16] [17] მწარმოებელთა ჩემპიონატში, მათ მიაღწიეს მეორე ადგილს, ტოიოტას მიღმა, საინზმა მეორე ადგილი დაიკავა მძღოლების ჩემპიონატში, ხოლო მაკრეი - მეოთხე. [21] 1994 წელს სუბარუს გუნდის სხვა მძღოლები იყვნენ პატრიკ ნჯირუ , რომელიც იასპარეზობდა Safari Rally-ში, რიჩარდ ბერნსი Safari Rally-სა და Rally დიდ ბრიტანეთში, Possum Bourne ახალ ზელანდიაში და Piero Liatti Rallye Sanremo-ზე. [16] [21] 1995 წლის სეზონისთვის ძირითადი მძღოლები დარჩნენ Sainz ნომრით 5 მანქანაში და McRae ნომრით 4 მანქანაში. საინზმა მოიგო სეზონის გახსნის რაუნდი Rallye Monte Carlo-ზე, ხოლო მაკრეი გამოვარდა ღონისძიებაზე. [22] Rally შვედეთში, Sainz, McRae და მესამე მძღოლი Mats Jonsson ყველა პენსიაზე წავიდნენ ძრავის პრობლემებით. [23] საინცმა კვლავ მოიგო რალი პორტუგალიაში, ხოლო მაკრეიმ მესამე ადგილი დაიკავა. [24] Rallye de France-ზე, Sainz, McRae და მესამე მძღოლი Piero Liatti დაასრულეს მეოთხე, მეხუთე და მეექვსე ადგილებზე შესაბამისად. [25] ახალი ზელანდიის რალიზე მაკრეიმ სეზონის პირველი გამარჯვება მოიპოვა. [26] გუნდის სხვა მძღოლები იყვნენ პოსუმ ბორნი, რომელმაც მეშვიდე ადგილი დაიკავა და რიჩარდ ბერნსი, რომელიც პენსიაზე გავიდა მექანიკური უკმარისობით. [26] Rally Australia-ზე მაკრეიმ მეორე ადგილი დაიკავა. [27] საინცი პენსიაზე გავიდა მას შემდეგ, რაც მისი რადიატორი ჩავარდა, ხოლო მესამე მძღოლი ბორნი პენსიაზე გავიდა ავარიის შემდეგ. [27] Rallye Catalunya-ზე სუბარუმ პოდიუმზე 1–2–3 დასრულებით დაბლოკა. [28] საინცი პირველი დაიკავა, მაკრეი მეორე და მესამე მძღოლი პიერო ლიატი გავიდა მესამეზე. [28] საინცის პირველი ადგილის დასრულებამ კატალუნიაში დატოვა ის და მაკრეის ქულები, რომლებიც მიიღეს სეზონის ბოლო ღონისძიებაში, RAC Rally of Rally of Rally. [29] მაკრეიმ გაიმარჯვა, დაიკავა პირველი ადგილი თავის საშინაო ღონისძიებაზე, მოიგო მისი პირველი და ერთადერთი მძღოლების ჩემპიონატი, პირველი სუბარუს გუნდისთვის. [16] [17] Sainz-მა დაასრულა მეორე ადგილი, რამაც მას მეორე ადგილი დაიკავა ჩემპიონატში, ხოლო მესამე მძღოლი რიჩარდ ბერნსი მესამე ადგილზე გავიდა, რაც გუნდს ზედიზედ მეორედ 1–2–3 დაასრულა. [16] [29] მაკრეისა და საინცს შორის გუნდმა მოახერხა სუბარუს სეზონის რვა რალიდან ხუთი მოიგო, რითაც გუნდს პირველი კონსტრუქტორთა ჩემპიონატი მოუგო. [16] [17] [30] სეზონის ბოლოს საინცმა დატოვა სუბარუ და შეუერთდა Ford World Rallye Sport-ს . [31]</p>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/David_Richards_crop.jpg/330px-David_Richards_crop.jpg" width="400" height="450">
         </div>
 
-        <h2>კოლინ მაკრეის 1996 წლის Impreza 555</h2>
+        <h2 class="race4">კოლინ მაკრეის 1996 წლის Impreza 555</h2>
         <div style="display: flex;">
-            
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Colin_McRae_Subaru_Impreza_WRC.jpg/330px-Colin_McRae_Subaru_Impreza_WRC.jpg" height="500">
             <p>1996 წლის მსოფლიო რალის ჩემპიონატის სეზონისთვის კოლინ მაკრეი კვლავ იყო სუბარუს წამყვანი მძღოლი. [16] 1995 წლის ჩემპიონატში გამარჯვების შემდეგ, მის Impreza 555-ს ეცვა #1 ფირფიტა. [31] მას შეუერთდნენ გუნდის მძღოლები კენეტ ერიქსონი , #2 მანქანით, და პიერო ლიატი , მათი თანამძღოლები, სტაფან პარმანდერი და მარიო ფერფოგლია, შესაბამისად. [16] [31] სეზონის პირველ ღონისძიებაზე, შვედეთის რალი, მაკრეიმ მესამე ადგილი დაიკავა, ერიქსონმა მეხუთე ადგილი დაიკავა, ხოლო ლიატი მეთორმეტეზე. [32] 1994 წლის მსოფლიო ჩემპიონი მძღოლებში დიდიე აურიოლი ასევე მართავდა სუბარუს გუნდს შვედეთში, რითაც თავისი #3 მანქანა მეათე ადგილზე გავიდა. [32] მეორე ტურში, Safari Rally-ზე, ლიატის ნომერი შეიცვალა #10-დან #3-მდე. [33] მან მეხუთე ადგილი დაიკავა. [33] მაკრეიმ მეოთხე ადგილი დაიკავა, ხოლო ერიქსონი მეორე. [33] ინდონეზიის რალიზე ლიატიმ მეორე ადგილი დაიკავა, ხოლო მაკრეი და ერიქსონი ავარიის შემდეგ პენსიაზე წავიდნენ. [34] მაკრეის პირველი გამარჯვება სეზონში იყო აკროპოლისის რალიზე , ჩემპიონატის მეოთხე რაუნდი. [16] [35] ლიატი და ერიკსონი მეოთხე და მეხუთე ადგილზე იყვნენ შესაბამისად. [35] ერიქსონმა მესამე ადგილი დაიკავა, ხოლო ლიატი მეხუთე რალი არგენტინაზე. [36] მაკრეი ჩამოვარდა რალი არგენტინიდან და შემდეგ ღონისძიებაზე, რალი ფინეთში. [36] [37] ლიატი ფინეთში არ იასპარეზა, თუმცა ერიქსონმა მოახერხა დასრულება მე-5 ადგილზე. [37] მაკრეიმ, ერიქსონმა და ლიატიმ ავსტრალიის რალიზე მე-4, მე-2 და მე-7 ადგილი დაიკავეს. [38] სანრემოში მაკრეიმ გაიმარჯვა, ერიქსონმა კი მე-5 ადგილი დაიკავა. [16] [39] ლიატი პენსიაზე გავიდა ელექტრო ავარიის გამო. [39] სეზონის ბოლო რაუნდში, Rallye Catalunya, მაკრეიმ ზედიზედ მეორე გამარჯვება მოიპოვა. [16] [40] სუბარუმ 1–2 დაასრულა, ხოლო ლიატი მეორე ადგილზე გავიდა. [40] ერიქსონმა მეშვიდე პოზიცია დაიკავა. [40] თანმიმდევრული პოდიუმების წყალობით, სუბარუმ წარმატებით დაიცვა კონსტრუქტორთა ჩემპიონატი, მაგრამ მაკრეიმ დაკარგა მძღოლების ჩემპიონატი ტომი მაკინენთან . [16] [17] 1997–1998, 1997 წელს მაკრეი კვლავ ხელმძღვანელობდა გუნდს, თუმცა მისი თანამძღოლი დერეკ რინგერი შეცვალა უელსელმა ნიკი გრისტმა . [41] მეორადი მძღოლების/თანამძღოლების გუნდებში შედიოდნენ პიერო ლიატი/ფაბრიცია პონსი (პირველი მონტე კარლოში), ოლივიე ბური/კრისტოფ ჰოფმანი და კენეტ ერიქსონი/სტაფან პარმანდერი (პირველი შვედეთში და ახალ ზელანდიაში). [41] კიდევ ერთხელ გუნდმა წარმატებით დაიცვა კონსტრუქტორთა ჩემპიონატი, მოიგო რვა გამარჯვება თოთხმეტი რალიდან, მაგრამ მაკრეიმ კვლავ წააგო მძღოლების ჩემპიონატი ტომი მაკინენთან , ამჯერად მხოლოდ ერთი ქულით. [17] [41] 1998 წელს გუნდს თითქმის უცვლელი შემადგენლობა ჰყავდა, თუმცა თითო რაუნდში მონაწილეობდნენ ჯაჰუ კანგასი/პენტი კუუკკალა და ჯარნო კიტოლეჰტო/არტო კაპანენი. [41] მაკრეიმ მოიგო პორტუგალიაში, კორსიკასა და საბერძნეთში. თუმცა, უამინდობამ და მექანიკურმა გაუმართაობამ დააზარალა გუნდი და სუბარუმ და მაკრეიმ თავიანთ ჩემპიონატში მესამე ადგილი დაიკავეს. [41] სეზონის ბოლოს მაკრეიმ დატოვა გუნდი და შეუერთდა Ford-ს , მათი ახალი მანქანის, Ford Focus WRC-ის ტარების მომხიბვლელი პერსპექტივით . [17]</p>
         </div>
 
-        <h2>პეტერ სოლბერგი</h2>
+        <h2 class="race5">პეტერ სოლბერგი</h2>
         <div style="display: flex;">
             <p>სუბარუს ჰქონდა სრულიად ახალი შემადგენლობა 1999 წლის სეზონისთვის , ნომინირებული მძღოლების/თანამძღოლების გუნდებით რიჩარდ ბერნსი / რობერტ რეიდი , იუჰა კანკუნენი / იუჰა რეპო და ბრუნო ტირის / სტეფან პრევოტის მესამე გუნდი . [42] [43] [44] ახალ მანქანას, WRC99, აღჭურვილი იყო ელექტრონულად კონტროლირებადი Paddle-ის გადამრთველით , წამყვანი მავთულის დროსლით. ტექნიკური სირთულეების გამო გუნდმა არგენტინაში სეზონის მე-7 ტურამდე იბრძოლა. [44] იქიდან მოყოლებული, გუნდებმა მოიპოვეს პოდიუმი რვა ღონისძიებიდან შვიდში, ხუთი მოგებით, რომელთაგან სამი იყო 1–2 დასრულება. [44] სუბარუმ მეორე ადგილი დაიკავა მწარმოებელთა ჩემპიონატში, მხოლოდ ოთხი ქულით ჩამორჩება ტოიოტას. ბერნსმა გაიმარჯვა საბერძნეთში, ავსტრალიაში და უელსში, მეორე ადგილისთვის, ხოლო კანკუნენმა მეოთხე ადგილი დაიკავა მძღოლების ჩემპიონატში, არგენტინასა და ფინეთში გამარჯვებით. [44] ბერნსმა და კანკუნენმა განაგრძეს სუბარუში მგზავრობა 2000 წლის სეზონში , პეტერ სოლბერგი შეუერთდა გუნდს სეზონის ნახევარში და მართავდა Rallye de France- ზე . [45] [46] [47] [48] გუნდმა ჩემპიონატში მესამე ადგილი დაიკავა, ხოლო ბერნსი ზედიზედ მეორე წელიწადს მეორე ადგილზე გავიდა მძღოლების ჩემპიონატში. [47]ბერნსმა და სოლბერგმა შეადგინეს სუბარუს ნომინირებული შემადგენლობა 2001 წლის სეზონისთვის , მარკკო მერტინი / მაიკლ პარკი და ტოში არაი / ტონი სირკომბი მონაწილეობდნენ შერჩეულ ღონისძიებებში. [47] სუბარუმ კვლავ მოიგო მძღოლების ჩემპიონატი 2001 წელს რიჩარდ ბერნსთან და თანამძღოლთან რობერტ რეიდთან ერთად . ბერნსმა სუბარუ დატოვა პეჟოში 2001 წლის სეზონის ბოლოს. [47]</p>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Petter_Solberg_-_2006_Cyprus_Rally_5.jpg/330px-Petter_Solberg_-_2006_Cyprus_Rally_5.jpg" width="400">
         </div>
 
-        <h2>ტომი მაკინენი</h2>
+        <h2 class="race6">ტომი მაკინენი</h2>
         <div style="display: flex;">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Toyota_Yaris_WRC_2016-09-29_001_%28cropped%29.jpg/360px-Toyota_Yaris_WRC_2016-09-29_001_%28cropped%29.jpg" height="300" width="400">
             <p>2002 წლის სეზონისთვის ბერნსი შეცვალეს ტომი მაკინენმა და თანამძღონელმა კაჯ ლინდსტრომმა. პეტერ სოლბერგი განაგრძობდა გუნდს, ხოლო პასი ჰაგსტრომი იყო გუნდის საცდელი მძღოლი. [49] [50] 2001 წლის ოქტომბერში ოთხგზის მძღოლის ჩემპიონატის გამარჯვებული მაკინენის ხელმოწერის შემდეგ, გუნდის მოლოდინი მაღალი იყო. [50] თუმცა, სეზონის გახსნის შემდეგ მონტე კარლოში, მან მხოლოდ ხუთი მოვლენის დასრულება შეძლო მთელი სეზონის განმავლობაში. [50] [51] [52] მისმა თანაგუნდელმა, სოლბერგმა ბევრად უკეთესი შედეგი გამოიღო, დაასრულა ცხრა ღონისძიება, რომელთაგან ხუთი იყო პოდიუმზე დასრულება, მათ შორის მისი პირველი WRC გამარჯვება, დიდი ბრიტანეთის რალიზე , სეზონის ბოლო რაუნდი. [50] მოგებამ მას ფორდის კარლოს საინცს გაუსწრო და მეორე ადგილი დაიკავა მძღოლების ჩემპიონატში. [50] 2003 წლის სეზონისთვის მძღოლების შემადგენლობა უცვლელი დარჩა წინა წელთან შედარებით. სოლბერგი მართავდა #7 მანქანას, მაკინენი #8 მანქანას. სეზონი ცუდად დაიწყო, არც ერთმა მძღოლმა არ დაასრულა Rallye Monte Carlo. [53] შემდეგ სოლბერგმა მოიპოვა ოთხი პირდაპირი გამარჯვება, კვიპროსში, ავსტრალიაში, საფრანგეთში და დაასრულა სეზონი ზედიზედ მეორე გამარჯვებით ბრიტანეთში , რითაც უზრუნველყოფდა მას მძღოლის ჩემპიონატი თავისთვის და თანამძღოლის ფილ მილსისთვის , სებასტიან ლოებს ძლივს დაამარცხა ერთი ქულით. . [54] [53] [55] გუნდმა მხოლოდ მესამე ადგილის მოპოვება მოახერხა მწარმოებელთა ჩემპიონატში, რომელსაც აჯობა Citroën-მა და Peugeot-მა. [53] [56] სეზონის ბოლოს, ტომი მაკინენი გადადგა WRC-დან. [51]</p>
