--- a/day35/homework/homework.html
+++ b/day35/homework/homework.html
@@ -1,5 +1,5 @@
 <!--
-დავალება 1: თქვენს პორტფოლიოში დაამატეთ form. form-ში მოცემული უნდა
+დავ 1: თქვენს პორტფოლიოში დაამატეთ form. form-ში მოცემული უნდა
 გქონდეთ name, surname, age, mail, ასევე message. საბოლოოდ აიღეთ 
 ერთი ღილაკი, რომლითაც მოხდება submit
 -->
@@ -22,7 +22,5 @@
 </html>
 
 <!-- 
-შექმენით კლიენტის, სერვერის და ბაზის კავშირი თქვენი ინსპირაციით 
+დავ 2:შექმენით კლიენტის, სერვერის და ბაზის კავშირი თქვენი ინსპირაციით 
 -->
-
-
