--- a/HTML Remembering/remember.html
+++ b/HTML Remembering/remember.html
@@ -58,7 +58,9 @@ p - პარაგრაფი
     button - inline - ანუ ის იკავებს იმხელა ადგილს რამხელაც სჭირდება
 
 
-📜-📜-📜-📜  label - ის გამოიყენება შეყვანის ველის მის აღწერილ 
+📜-📜-📜-📜  -   start ->
+
+label - ის გამოიყენება შეყვანის ველის მის აღწერილ 
 ტექსტთან დასაკავშირებლად, რაც ეკრანის მკითხველს გაუადვილებს 
 იმის გაგებას, თუ რა ხდება ანუ რა უნდა შეიყვანოს კონკრეტულ ადგილას.
 მაგ:
@@ -134,3 +136,22 @@ placeholder - (გამოიყენება input-ში). ეს იმი
 /please enter your email/
 
 6 ->
+select (არჩევანი) - ჩვენ გვექნება ჩამონათვალი. რა უნდა იყოს 
+ჩამონატთვალში მაგას ჩვენ ვუწერთ. ხოლო ამას ჩვენ ვუწერთ -> 
+option - ში. ამით ჩვენ მომხმარებელს ავარჩევინებთ ჩამონათვალიდან.
+
+7 ->
+name - name ატრიბუტი განსაზღვრავს შეყვანას value, და ის იგზავნება "სერვერზე".
+ანუ ჩვენ name ატრიბუტით ვაგზავნით მონაცემებს სერვერზე. ყველა მნიშვნელობას
+შესაფერისი name (სახელი) უნდა დაარქვა.
+
+8 ->
+value - ეს ატრიბუტი HTML-ში გამოიყენება იმ ელემენტის მნიშვნელობის
+დასაზუსტებლად, რომლითაც იგი გამოიყენება. მას აქვს განსხვავებული მნიშვნელობა
+სხვადასხვა HTML ელემენტისთვის.
+
+9 ->
+
+
+
+10 ->
